<resources>
    <string name="app_name">FoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant">My Restaurant</string>
    <string name="hello_explore_your_dream_food">Hello explore your dream food</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="your_favourite_food_and_tasty_food_is_here">Your favourite food and tasty food is here!</string>
    <string name="view_more">view more</string>
    <string name="_10_weekend_delicious_ntop_favourite_food">10 weekend Delicious \nTop Favourite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make_order">Make Order</string>
    <string name="total">Total</string>
    <string name="_180">$180</string>
    <string name="my_cart">My Cart</string>
    <string name="order_now">Order Now</string>
    <string name="_120_0">120.0</string>
</resources>